tests/baselines/reference/collisionExportsRequireAndAmbientClass.errors.txt
collisionExportsRequireAndAmbientClass_externalmodule.ts(11,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
collisionExportsRequireAndAmbientClass_globalFile.ts(11,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== collisionExportsRequireAndAmbientClass_externalmodule.ts (1 errors) ====
    export declare class require {
    }
    export declare class exports {
    }
    declare module m1 {
        class require {
        }
        class exports {
        }
    }
    module m2 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export declare class require {
        }
        export declare class exports {
        }
    }
    
==== collisionExportsRequireAndAmbientClass_globalFile.ts (1 errors) ====
    declare class require {
    }
    declare class exports {
    }
    declare module m3 {
        class require {
        }
        class exports {
        }
    }
    module m4 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export declare class require {
        }
        export declare class exports {
        }
        var a = 10;
    }